
  - index 를 /works/new 로 redirect
  - 활동시간을 선택
  - thanks 문구
  - 1365 관련된 항목을 방명록에서 봉사활동으로 옮김

v0.1.0    Wed Aug 5 17:43:00 2015 +0900
  - init release