@@ -85,8 +85,10 @@ sub _public_routes {
     $work->get('/')->to('work#work')->name('work');
     $work->get('/edit')->to('work#edit')->name('work.edit');
     $work->post('/')->to('work#update')->name('work.update');
-    $work->put('/status')->to('work#update_status');
     $work->options('/status')->to('work#preflight_cors');
+    $work->options('/1365')->to('work#preflight_cors');
+    $work->put('/status')->to('work#update_status');
+    $work->put('/1365')->to('work#update_1365');
     $work->get('/guestbook')->to('work#add_guestbook')->name('work.guestbook');
     $work->post('/guestbook')->to('work#create_guestbook');
 }
